# cpt-categorizer

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: ci.yml
cpt_categorizer/: __init__.py  features.py  pipeline.py  plots.py  schema_contract.py  suggestion_store.py  tagging_cache.py
cpt_categorizer/agents/: __init__.py  compliance.py  dimension_governor.py  dimension_suggestor.py  normalizer.py  parsing.py  parsing_agent.py  section_governor.py  section_suggestor.py  subsection_governor.py  subsection_suggestor.py  tagging.py
cpt_categorizer/config/: directory.py  openai.py
cpt_categorizer/utils/: logging.py  logging_utils.py
docs/: PLAN.md  mkdocs.yml  workflow.txt
docs/docs/: agent_roles.md  getting-started.md  index.md
logs/: category_result.csv  dimension_result.csv  usage.csv
logs/usage/: parsing_agent.csv
schema/: README.md  cpt_detail.json  cpt_section_subsection.json  dimensions.json  schema_edits.csv  sections.json  service_group_dimension_schema.json  service_group_dimension_value_schema.json  service_group_schema.json  subsections.json
schema/v1/: cpt_section_subsection.json
scripts/: debug_tagging.py  lint_schema.py  run_trial.py
tests/: test_parsing_agent.py  test_pipeline.py  test_suggestion_store.py  test_tagging_cache.py
tests/agents/: debug_tagging.py  test_dimension_governor.py  test_dimension_suggestor.py  test_parsing.py  test_section_governor.py  test_section_suggestor.py  test_subsection_governor.py  test_subsection_suggestor.py  test_tagging.py
tests/config/: test_openai.py
tests/utils/: test_logging.py
