[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cpt_categorizer"
version = "0.0.1"
description = "An automated categorization of unstandardized Philippine CPT descriptions using OpenAI API"
authors = [
  { name = "Juedi Myro Eugenio" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known-first-party = ["cpt_categorizer"]
force-sort-within-sections = true