[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cpt_categorizer"
version = "0.0.1"
description = "An automated categorization of unstandardized Philippine CPT descriptions using OpenAI API"
authors = [
  { name = "Juedi Myro Eugenio" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"
dependencies = [
    "openai>=1",
    "python-dotenv>=1",
    "tqdm>=4",
    "pandas>=2",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
extend-ignore = ["E731", "E266", "E501", "C901"]

[tool.ruff.lint.isort]
known-first-party = ["cpt_categorizer"]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.10"
packages = ["cpt_categorizer"]
warn_return_any = true
ignore_missing_imports = true
